Encore des commentaires et du rangement

--- a/templates/ouverte/reponseOuverte.html
+++ b/templates/ouverte/reponseOuverte.html
@@ -11,7 +11,7 @@
     <h3>(Répondez ce qui vous passe par la tête...)</h3>
     <hr/>
     <form action="/reponse-ouverte" method="POST">
-        <p><input name="nomP" type="text" placeholder="Nom du prof"/></p>
+        <p><input name="nomP" type="text" placeholder="Nom du professeur"/></p>
         <p><input name="reponse" type="text" placeholder="Entrez votre réponse ici"/></p>
         <p><input class="button" type="submit" value="J'envoie !" onClick="loading()"/></p>
     </form>
