--- a/templates/question/ajoutQuestion.html
+++ b/templates/question/ajoutQuestion.html
@@ -1,4 +1,6 @@
-{% extends 'partials/base.html' %} {% block main %}
+{% extends 'partials/base.html' %} 
+
+{% block main %}
 <div class="mid double">
     <div class="code">
         <!-- Partie écriture -->
